--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div class="container"></div>
+    <div class="outer-container">
+        <div class="container"></div>
+    </div>
 </body>
 </html>
