--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div class="header">
+        <button>Change grid size</button>
+    </div>
     <div class="outer-container">
         <div class="container"></div>
     </div>
