--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="header">
-        <button>Change grid size</button>
+        <button>Change Grid Size</button>
     </div>
     <div class="outer-container">
         <div class="container"></div>
